<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstScreen.secondSubScreen.WorkerData">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Имя"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/position"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt" />

    <TextView
        android:id="@+id/posVTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/h_position"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pos"
        app:layout_constraintTop_toTopOf="@+id/pos" />

    <EditText
        android:id="@+id/posVEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text=""
        android:hint="@string/h_position"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/pos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pos"
        app:layout_constraintTop_toTopOf="@+id/pos" />

    <CheckBox
        android:id="@+id/isAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/admin_rules"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintBottom_toTopOf="@+id/flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pos"
        app:layout_constraintTop_toBottomOf="@+id/pos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintStart_toStartOf="@+id/isAdmin"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/mailV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/h_mail"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mailTxt"
        app:layout_constraintTop_toTopOf="@+id/mailTxt" />

    <TextView
        android:id="@+id/passTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/firstPass"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintBottom_toTopOf="@+id/flow"
        app:layout_constraintStart_toStartOf="@+id/mailTxt"
        app:layout_constraintTop_toBottomOf="@+id/mailTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/h_pass"
        android:textColor="@color/black"
        android:textSize="@dimen/usualText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passTxt"
        app:layout_constraintTop_toTopOf="@+id/passTxt" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:constraint_referenced_ids="backB,space, applyB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/space"
        android:layout_width="30dp"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/backB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/button_text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/applyB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/accept"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/button_text_color"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>